admission/ValidatingAdmissionPolicy/policies/privilege-escalation/initcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privilege-escalation-initcontainers
  annotations:
    kubeapt.io/uuid: "65b9d865-f70b-4c45-bc91-077299c09b2c"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
